# mfa-servicenow-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  .mcp.multi-instance.json.example  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  CONSOLIDATION_PLAN.md  Dockerfile  LICENSE  MULTISESSION_IMPROVEMENTS_2026-07-05.md  PERFORMANCE_PLAN.md  PHASE1_COMPONENT_CREATE.md  PHASE2_SYNC_EXTENSION.md  PHASE3_PAGE_LAYOUT_CRUD.md  PHASE4_REGISTRATION.md  PHASE_4_PLAYBOOK.md  README.es.md  README.hi.md  README.ja.md  README.ko.md  README.md  README.zh.md  SECURITY.md  WEB_LOGIN_FAILURE_ANALYSIS.md  WINDOWS_INSTALL.md  docker-compose.yml  index.html  mcp_deep_research_token_optimization.md  mcp_next_win_update_remote_trim_spec.md  mcp_token_accounting_and_tightening_plan.md  pyproject.toml  setup_windows.ps1  sitemap.xml
.githooks/: pre-commit  pre-push
.github/workflows/: browser-bundle.yml  ci.yml  deploy-website.yml
config/: tool_packages.yaml
docs/: ADVERSARIAL_REVIEW.ko.md  CLIENT_SETUP.es.md  CLIENT_SETUP.hi.md  CLIENT_SETUP.ja.md  CLIENT_SETUP.ko.md  CLIENT_SETUP.md  CLIENT_SETUP.zh.md  IMPROVEMENT_PLAN.ko.md  TOOL_INVENTORY.hi.md  TOOL_INVENTORY.ja.md  TOOL_INVENTORY.ko.md  TOOL_INVENTORY.md  TOOL_INVENTORY.zh.md  TOOL_PACKAGES.es.md  TOOL_PACKAGES.hi.md  TOOL_PACKAGES.ja.md  TOOL_PACKAGES.ko.md  TOOL_PACKAGES.md  TOOL_PACKAGES.zh.md  WINDOWS_INSTALL.hi.md  WINDOWS_INSTALL.ja.md  WINDOWS_INSTALL.ko.md  WINDOWS_INSTALL.md  WINDOWS_INSTALL.zh.md  catalog.es.md  catalog.hi.md  catalog.ko.md  change_management.es.md  change_management.hi.md  change_management.ja.md  change_management.ko.md  change_management.md  change_management.zh.md  llm-setup.ja.md  llm-setup.ko.md  llm-setup.md  llm-setup.zh.md  workflow_management.es.md  workflow_management.ja.md  workflow_management.ko.md  (+2 more)
docs/CLIENT_SETUP/: index.html
docs/TOOL_INVENTORY/: index.html
docs/WINDOWS_INSTALL/: index.html
docs/WINDOWS_INSTALL.ko/: index.html
docs/catalog/: index.html
docs/change_management/: index.html
docs/workflow_management/: index.html
examples/: changeset_management_demo.py  claude_desktop_config.json  env.basic.minimal.example  env.browser.minimal.example  opencode.apikey.json  opencode.basic.minimal.json  opencode.browser.minimal.json  opencode.gemini.json  opencode.oauth.json  wake_servicenow_instance.py  workflow_management_demo.py
scripts/: build_desktop_release.py  check_dead_params.py  check_orphan_tool_refs.py  check_pdi_info.py  check_pdi_status.py  install_unix_release.sh  install_windows_release.ps1  measure_tool_tokens.py  regenerate_doc_counts.py  regenerate_tool_inventory.py  regenerate_tool_module_index.py  replace_requests.py  replace_requests2.py  setup_api_key.py  setup_auth.py  setup_oauth.py  test_connection.py
search/: search_index.json
skills/: SKILL.md
skills/admin/developer-activity/: SKILL.md
skills/admin/health-check/: SKILL.md
skills/admin/schema-discovery/: SKILL.md
skills/analyze/: code-detection.md  dependency-analysis.md  esc-page-audit.md  local-source-audit.md  portal-diagnosis.md  provider-audit.md  widget-analysis.md
skills/deploy/: change-lifecycle.md  incident-triage.md
skills/development/changeset-workflow/: SKILL.md
skills/development/code-review/: SKILL.md
skills/development/dependency-analysis/: SKILL.md
skills/development/script-include-management/: SKILL.md
skills/explore/: esc-catalog-flow.md  flow-trigger-tracing.md  health-check.md  route-tracing.md  schema-discovery.md
skills/fix/: code-review.md  widget-debugging.md  widget-patching.md
skills/itsm/change-lifecycle/: SKILL.md
skills/itsm/incident-triage/: SKILL.md
skills/itsm/knowledge-authoring/: SKILL.md
skills/manage/: app-source-download.md  changeset-workflow.md  local-sync.md  page-management.md  script-include-management.md  skill-management.md  source-download.md  workflow-management.md
skills/portal/code-detection/: SKILL.md
skills/portal/portal-diagnosis/: SKILL.md
skills/portal/route-tracing/: SKILL.md
skills/portal/source-download/: SKILL.md
skills/portal/widget-analysis/: SKILL.md
skills/portal/widget-patching/: SKILL.md
src/servicenow_mcp/: __init__.py  __main__.py  cli.py  server.py  setup_installer.py  setup_skills.py  version.py
src/servicenow_mcp/auth/: _browser_dom.py  _cookies.py  _diagnostics.py  _display.py  _http_session.py  _keepalive.py  _process.py  _response_predicates.py  _url_predicates.py  auth_manager.py
src/servicenow_mcp/config/: tool_packages.yaml
src/servicenow_mcp/policies/: __init__.py  write_guards.py
src/servicenow_mcp/resources/: __init__.py  catalog.py  changesets.py  script_includes.py  skill_resources.py
src/servicenow_mcp/services/: __init__.py  catalog.py  change.py  changeset.py  incident.py  kb_article.py  portal_component.py  portal_layout.py  script_include.py  scripted_rest.py  ui_policy.py  user.py
tests/: conftest.py  test_action_allowlist.py  test_action_source.py  test_atomic_io.py  test_attachment_tools.py  test_audit_tools.py  test_audit_tools_extra.py  test_auth_lock_atomicity.py  test_auth_manager.py  test_auth_manager_browser.py  test_auth_manager_extra.py  test_auth_manager_final.py  test_auth_process_display.py  test_auth_profile_contention.py  test_baseline_sync.py  test_batch_and_performance.py  test_browser_grace_period.py  test_catalog_optimization.py  test_catalog_optimization_coverage.py  test_catalog_resources.py  test_catalog_service.py  test_catalog_tools.py  test_catalog_variables.py  test_change_service.py  test_change_snapshots.py  test_change_tools.py  test_changeset_resources.py  test_changeset_service.py  test_changeset_service_get.py  test_changeset_tools.py  test_cli.py  test_cli_extra.py  test_config.py  test_core_plus.py  test_deep_analysis.py  test_deep_probes.py  test_detection_tools.py  test_docs_sync.py  test_download_map.py  test_epic_tools.py  (+152 more)
website/: mkdocs.yml  requirements.txt
website/docs/: index.es.md  index.hi.md  index.ja.md  index.ko.md  index.md  index.zh.md  ko.md
website/hooks/: rewrite_links.py
(+137 files in other folders)
